--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(USE_KTHOOK ON)
 set(USE_RAKHOOK ON)
 set(USE_SAMPAPI ON)
 set(USE_PLUGINSDK OFF)
-set(USE_IMGUI OFF)
-set(USE_DXSDK OFF)
+set(USE_IMGUI ON)
+set(USE_DXSDK ON)
 set(USE_CURL OFF)
 set(USE_JSON OFF)
 
